--- a/SkeletonBasics-WPF/SkeletonBasics-WPF.csproj
+++ b/SkeletonBasics-WPF/SkeletonBasics-WPF.csproj
@@ -44,6 +44,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -83,6 +84,7 @@
     <Compile Include="Modules\Squad\States\State2.cs" />
     <Compile Include="Modules\Squad\States\State1.cs" />
     <Compile Include="Modules\Squad\States\State0.cs" />
+    <Compile Include="Modules\Utilities\MathUtility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
